@@ -58,6 +58,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - Fixed deadlock in remove_array. remove_array was calling get_arry with allarrays_mutex
       locked. TRQ-1466
   b - Fix a deadlock in rare cases on job insertion. TRQ-1472.
+  b - Fix a deadlock after restarting pbs_server when it was SIGKILL'd before a 
+      job array was done cloning. TRQ-1474.
 
 4.1.3
   b - fix a security loophole that potentially allowed an interactive job to run 
